--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_API_URL=https://luftbnb-api.herokuapp.com
-
+REACT_APP_API_URL=https://instakilogram-api.herokuapp.com/api
+REACT_APP_GITHUB_CLIENT_ID=8da553fa87f13af3b9c5
+REACT_APP_GOOGLE_CLIENT_ID=794644769367-8lbh86hm5pnhc77rkijeduoblmcrig7k.apps.googleusercontent.com
 
 
