--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
-  "homepage": "https://dan-ch.github.io/InstaUi",
+  "homepage": "https://dan-ch.github.io/InstakilogramUi",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
